# equinix-docs-mcp-server

./: .gitignore  Dockerfile  FASTMCP_IMPROVEMENTS.md  IMPLEMENTATION.md  LICENSE  README.md  TESTING_WITH_OLLAMA.md  debug_auth.py  demo_network_edge.py  equinix-mcp-config.template.json  pyproject.toml  setup.sh  test_auth.py  test_auth_debug.py  test_bridge_connection.py  test_defs_debugging.py  test_direct_api.py  test_direct_tool_call.py  test_docs_filtering.py  test_experimental_parser.py  test_fabric_connections.py  test_fastmcp_direct.py  test_final_integration.py  test_final_metal_call.py  test_json_auth.py  test_live_auth.py  test_mcp.py  test_mcp_init.py  test_mcp_protocol.py  test_mcp_server.py  test_mcp_server_no_ne.py  test_mcp_tool_direct.py  test_mcp_with_auth.py  test_metal_find_projects.py  test_metal_href.py  test_null_response.py  test_ollama_integration.py  test_provider_resources.py  test_quick_metal.py  test_response_processing.py  (+13 more)
.github/workflows/: ci.yml  update-specs.yml
MagicMock/load().output.merged_spec_path/: 140240166467824
config/: DCIMCagelevelDashboard.yaml  apis.yaml  workflows-dcim.yaml  workflows.yaml
docs/: INTEGRATION_EXAMPLE.md  SEARCH_FETCH_USAGE.md  sitemap_cache.xml
examples/: demo.py
overlays/: billing.yaml  fabric.yaml  metal.yaml  network-edge.yaml  workvisitsv2.yaml  workvisitv1.yaml
src/equinix_docs_mcp_server/: __init__.py  arazzo_manager.py  config.py  docs.py  main.py  response_formatter.py  spec_manager.py
src/equinix_docs_mcp_server/lunr_search/: search_client.py
src/equinix_docs_mcp_server/openapi_overlays/: overlay_manager.py
src/equinix_docs_mcp_server/swagger2openapi/: converter.py
src/equinix_mcp_server/: __init__.py  arazzo_manager.py  auth.py  config.py  docs.py  main.py  response_formatter.py  spec_manager.py
src/equinix_mcp_server/lunr_search/: search_client.py
src/equinix_mcp_server/openapi_overlays/: __init__.py  overlay_manager.py
src/equinix_mcp_server/swagger2openapi/: LICENSE  converter.py
tests/: conftest.py  test_arazzo_fallback.py  test_arazzo_step_normalization.py  test_auth.py  test_config.py  test_docs.py  test_main.py  test_openapi_overlays.py  test_response_formatter_ne.py  test_spec_manager.py
